# mcp-broker

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  glama.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.codex-plugin/: plugin.json
.github/: pull_request_template.md
brand/: README.md
config/: broker.bundle.schema.json  broker.example.yaml  broker.schema.json
docker/: docker-entrypoint.sh
docs/: add-profile.md  adoption-guide.md  architecture.md  auth-recipes.md  branding.md  codex-deferred-tool-acceptance.md  community-launch.md  comparison.md  context-reduction-measurement.md  directory-submission-packet.md  distribution.md  docker-mcp-registry-submission.md  github-publication.md  governance-bundles.md  governance-control-plane.md  install.md  launch.md  migration.md  mutation-testing.md  npm-distribution.md  phase-foundation-roadmap.md  plugin-setup.md  protocol.md  public-readiness.md  release-checklist.md  runtime-layout.md  safety.md  security-model.md  security-review.md  shared-runtime-guardrails.md  smoke-contract.md  troubleshooting.md  upstream-classification.md  upstream-compatibility-matrix.md
mcpb/: manifest.json
mk/: bootstrap.mk  config.mk  distribution.mk  logging.mk  maintainer.mk  plugin.mk  release.mk  runtime.mk  tests.mk
npm/: README.md  package.json
public-export/: allowlist.txt  denylist.txt
registry/: server.json  server.template.json
scripts/: check_directory_submission.py  check_mutation_stats.py  check_release_versions.py  doctor.sh  enforce_grade_quality.py  ensure_docker_hub_public.py  install-launchagent.sh  install-systemd-user.sh  install-windows-task.ps1  linux-container-smoke.sh  linux-mutation.sh  linux-release-gate.sh  mcpb_stdio_smoke.py  public-export.py  public-release-dry-run.sh  public-surface-smoke.sh  release-smoke.sh  smithery_release.py  sync_release_metadata.py  uninstall-launchagent.sh  uninstall-systemd-user.sh  uninstall-windows-task.ps1  update_homebrew_formula.py  verify_public_release.py  (+1 more)
(+183 files in other folders)
